--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
 h1 {
-  font-size: 12px;
+  font-size: 25px;
+}
+
+html {
+  border: 10px solid #ffcb05;
+  height: 96.5%;
+}
+
+body {
+  background-color: #2a75bb;
+  color: #ffcb05;
+  display: block;
+  margin: 60px;
+  font-size: 18px;
+  line-height: 1.3;
 }
