--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 h1 {
   font-size: 25px;
+  text-align: center;
+  border-bottom: 1px solid black;
 }
 
 html {
@@ -14,4 +16,25 @@ body {
   margin: 60px;
   font-size: 18px;
   line-height: 1.3;
+}
+
+.button-class {
+  background-color: lightgrey;
+  color: black;
+  font-weight: bold;
+  border-radius: 3px;
+  max-width: 200px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.pokedex {
+  text-align: left;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
