--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,27 @@
 h1 {
   font-size: 25px;
   text-align: center;
-  border-bottom: 1px solid black;
-}
-
-html {
-  border: 10px solid #ffcb05;
-  height: 96.5%;
+  background-color: inherit;
+  color: white;
+  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 0.8px;
+  border-bottom: 2px solid black;
+  font-family: 'Rubik', sans-serif;
 }
 
 body {
   background-color: #2a75bb;
   color: #ffcb05;
-  display: block;
-  margin: 60px;
+  border: 10px solid #ffcb05;
+  height: 100%;
+}
+
+.pokedex {
+  display: inline-block;
+  margin-left: 60px;
   font-size: 18px;
   line-height: 1.3;
+  text-align: center;
 }
 
 .button-class {
@@ -23,18 +29,66 @@ body {
   color: black;
   font-weight: bold;
   border-radius: 3px;
-  max-width: 200px;
+  height: 30px;
+  width: 130px;
   cursor: pointer;
   margin: 10px;
+  text-align: center;
+}
+
+#isItLoaded {
+  display: none;
+}
+
+#loading {
+  z-index: 10;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+}
+
+header {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.logo {
+  height: 300px;
+  margin: 0 auto;
 }
 
 ul {
   list-style-type: none;
+
 }
 
 .pokedex {
-  text-align: left;
-  background-color: white;
+  background-color: #cc0000;
   color: black;
-  border: 1px solid black;
+  margin: 0 15%;
+  border: 2px solid black;
+}
+
+.pokedex-head {
+  background-color: #cc0000;
+  color: black;
+  text-align: center;
+}
+
+.search {
+  max-width: 15px;
+}
+
+.search_input {
+  display: none;
+}
+
+.button-search {
+  background-color: #fff;
+  color: inherit;
+  margin-right: 3px;
+  float: right;
 }
