--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,46 @@
+* {box-sizing: border-box;}
+
+:root {
+  --yellow: #ffcb05;
+  --mustard: #b3a125;
+  --blue: #2a75bb;
+  --navy: #003a70;
+  --red: #cc0000;
+}
+
+body {
+  background-color: var(--blue);
+  color: #ffcb05;
+  display: flex;
+  flex-direction: column;
+  border: 10px solid var(--yellow);
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+}
+a:hover {
+  color: rgb(255, 255, 255);
+}
+
 h1 {
-  font-size: 25px;
+  font-size: 35px;
   text-align: center;
   background-color: inherit;
   color: white;
+  margin: 0;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.8px;
   border-bottom: 2px solid black;
   font-family: 'Rubik', sans-serif;
 }
 
-body {
-  background-color: #2a75bb;
-  color: #ffcb05;
-  border: 10px solid #ffcb05;
-  height: 100%;
+h2 {
+  margin: 5px auto;
+  font-size: 20px;
 }
 
 .pokedex {
@@ -22,32 +49,191 @@ body {
   font-size: 18px;
   line-height: 1.3;
   text-align: center;
+  border-radius: 10px;
+  box-shadow: inset 0 0 15px grey;
 }
 
-.button-class {
-  background-color: lightgrey;
-  color: black;
-  font-weight: bold;
-  border-radius: 3px;
-  height: 30px;
-  width: 130px;
+.header-powerbtn {
+  background: url("../img/power.png");
+  background-size: 100% 100%;
+  margin-bottom: 0;
+  width: 45px;
+  height: 45px;
+  margin: 25px;
+  transition: ease-in-out all .4s;
   cursor: pointer;
-  margin: 10px;
-  text-align: center;
 }
 
-#isItLoaded {
+.header-powerbtn:hover {
+  /* different image than above */
+  background-color: var(--mustard);
+  border-radius: 50px;
+}
+
+/* modal */
+
+.close {
+  display: inline-block;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  border: 2px solid #000;
+  font-size: 1.5em;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.close:hover {
+  background-color: var(--mustard);
+  box-shadow: 2px 2px 5px #818181;
+  cursor: pointer;
+}
+
+.modal-foreground {
   display: none;
 }
 
-#loading {
-  z-index: 10;
+.off-screen {
+  background-color: black;
+  z-index: 1999;
+}
+
+#overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-radius: 35px;
+  background-color: #696666;
+  z-index: 1999;
+}
+
+.modal-foreground.visible::-webkit-scrollbar {
+  width: 10px;
+
+}
+.modal-foreground.visible::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+.modal-foreground.visible::-webkit-scrollbar-thumb {
+  background: #888;
+  height: 20px;
+  border-radius: 10px;
+}
+.modal-foreground.visible::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.modal-foreground.visible {
+  overflow: auto;
+  position: absolute;
   display: flex;
-  flex-flow: row nowrap;
+  flex-direction: column;
+  max-width: 800px;
+  width: 95.5%;
+  min-width: 240px;
+  height: 88%;
+  background-color: #e1e4e8;
+  border: 10px solid var(--yellow);
+  padding: 40px;
+  margin: 0;
+  top: 25px;
+  left: 15px;
   justify-content: center;
   align-items: center;
+}
+
+.pokemon-img {
+  width: 250px;
+  height: 250px;
+  margin-top: 50px;
+  margin-bottom: 0;
+}
+
+.pokedex-window {
+  position: relative;
+  max-width: 800px;
   width: 100%;
-  height: 90vh;
+  min-width: 300px;
+  height: 500px;
+  background-color: #696666;
+  margin: 50px auto;
+  padding: 25px 15px 35px;
+  border-radius: 5%;
+  border: 3px solid black;
+  transition: all ease-in-out 0.4s;
+}
+
+.pokedex-window-scrollbox {
+  overflow: auto;
+  max-width: 800px;
+  width: 100%;
+  min-width: 250px;
+  height: 100%;
+  margin: 0;
+  background-color: lightgrey;
+  padding: 0 15px 0 15px;
+}
+
+/* loading screen */
+.msg-board {
+  position: absolute;
+  display: flex;
+  font-size: 24px;
+  font-weight: 900;
+  max-width: 800px;
+  width: 95%;
+  min-width: 290px;
+  height: 95%;
+  margin: 0;
+  background-color: #696666;
+  align-items: center;
+  justify-content: center;
+}
+
+.pokedex-window-scrollbox::-webkit-scrollbar {
+  width: 11px;
+}
+.pokedex-window-scrollbox::-webkit-scrollbar-thumb {
+  background-color: #818181;
+  border-radius: 5px;
+}
+
+.pokemon-list {
+  padding: 0;
+  margin: 0;
+}
+
+.pokemon-list-style {
+  text-align: center;
+  cursor: pointer;
+  font-size: 1.7em;
+  font-weight: 600;
+  line-height: 60px;
+  color: black;
+  border-radius: 3px;
+  background-color: #b0acac;
+  border: 3px solid #999494;
+  width: 100%;
+  margin: 5px auto;
+  transition: all ease-in-out 0.3s;
+}
+.pokemon-list-style:hover {
+  font-size: 1.7em;
+  font-weight: 600;
+  line-height: 60px;
+  border: 3px solid #b0acac;
+  background-color: #999494;
+}
+/* remove outline to created buttons */
+.pokemon-list-style:focus {
+  outline: none;
+  transition: none;
 }
 
 header {
@@ -66,14 +252,16 @@ ul {
 }
 
 .pokedex {
-  background-color: #cc0000;
+  background-color: var(--red);
   color: black;
   margin: 0 15%;
   border: 2px solid black;
+  min-width: 400px;
+  padding: 0 15px;
 }
 
 .pokedex-head {
-  background-color: #cc0000;
+  background-color: inherit;
   color: black;
   text-align: center;
 }
@@ -83,11 +271,29 @@ ul {
 }
 
 .search_input {
-  display: none;
+
 }
 
-.button-search {
-  background-color: #fff;
+#search-container {
+  display: none;
+
+}
+
+.search-close {
+
+}
+
+#search-container.is-visible {
+  display: inline;
+  background-color: white;
+  color: black;
+  padding: 1%;
+  right: 0;
+  z-index: 100;
+}
+
+#button-search {
+  background-color: #d3d3d3;
   color: inherit;
   margin-right: 3px;
   float: right;
