--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ h2 {
   width: 95.5%;
   min-width: 240px;
   height: 88%;
-  background-color: #e1e4e8;
+
   border: 10px solid var(--yellow);
   padding: 40px;
   margin: 0;
@@ -146,6 +146,22 @@ h2 {
   left: 15px;
   justify-content: center;
   align-items: center;
+}
+
+.modal-foreground.visible.green {
+  background-color: green;
+}
+
+.modal-foreground.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.default {
+  background-color: grey;
 }
 
 .pokemon-img {
