--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ h1 {
   text-align: center;
   background-color: inherit;
   color: white;
-  margin: 0;
+  margin: 0 auto;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.8px;
   border-bottom: 2px solid black;
@@ -39,8 +39,13 @@ h1 {
 }
 
 h2 {
-  margin: 5px auto;
+  margin-top: 15px;
   font-size: 20px;
+  text-align: left;
+}
+
+.modal-img {
+  margin-bottom: 20px;
 }
 
 .pokedex {
@@ -89,9 +94,9 @@ h2 {
   cursor: pointer;
 }
 
-.modal-foreground {
+/* .modal-foreground {
   display: none;
-}
+} */
 
 .off-screen {
   background-color: black;
@@ -108,7 +113,7 @@ h2 {
   right: 0;
   border-radius: 35px;
   background-color: #696666;
-  z-index: 1999;
+  z-index: 1;
 }
 
 .modal-foreground.visible::-webkit-scrollbar {
@@ -127,10 +132,6 @@ h2 {
 }
 .modal-foreground.visible::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
-
-.modal {
-  width: 60%;
 }
 
 .modal-foreground.visible {
@@ -179,7 +180,7 @@ h2 {
   min-width: 300px;
   height: 500px;
   background-color: #696666;
-  margin: 50px auto;
+  margin: 20px auto;
   padding: 25px 15px 35px;
   border-radius: 5%;
   border: 3px solid black;
@@ -195,6 +196,9 @@ h2 {
   margin: 0;
   background-color: lightgrey;
   padding: 0 15px 0 15px;
+}
+.group-list-item {
+  z-index: 2000;
 }
 
 /* loading screen */
@@ -263,8 +267,14 @@ header {
   margin: 0 auto;
 }
 
+.form-control {
+  margin: 20px auto;
+  text-align: right;
+}
+
 ul {
   list-style-type: none;
+  z-index: 1000;
 }
 
 .pokedex {
@@ -280,4 +290,32 @@ ul {
   background-color: inherit;
   color: black;
   text-align: center;
+}
+
+.modal-backdrop {
+  display: none;
+}
+
+.modal-backdrop.in {
+  opacity: 0;
+}
+
+.modal-open {
+  overflow: scroll;
+}
+.modal-body {
+  min-height: 295px;
+
+}
+
+.modal {
+  z-index: inherit !important;
+  position: relative;
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0;
+}
+#modal {
+  width: 100%;
+  height: 100%;
 }
