--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,9 @@
 body {
   background-color: var(--blue);
   color: #ffcb05;
-  display: flex;
-  flex-direction: column;
+
   border: 10px solid var(--yellow);
-  height: 100%;
+
 }
 
 a {
@@ -48,16 +47,6 @@ h2 {
   margin-bottom: 20px;
 }
 
-.pokedex {
-  display: inline-block;
-  margin-left: 60px;
-  font-size: 18px;
-  line-height: 1.3;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: inset 0 0 15px grey;
-}
-
 .header-powerbtn {
   background: url("../img/power.png");
   background-size: 100% 100%;
@@ -73,34 +62,6 @@ h2 {
   /* different image than above */
   background-color: var(--mustard);
   border-radius: 50px;
-}
-
-/* modal */
-
-.close {
-  display: inline-block;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  border: 2px solid #000;
-  font-size: 1.5em;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.close:hover {
-  background-color: var(--mustard);
-  box-shadow: 2px 2px 5px #818181;
-  cursor: pointer;
-}
-
-/* .modal-foreground {
-  display: none;
-} */
-
-.off-screen {
-  background-color: black;
-  z-index: 1999;
 }
 
 #overlay {
@@ -134,31 +95,17 @@ h2 {
   background: #555;
 }
 
-.modal-foreground.visible {
-  overflow: auto;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  max-width: 800px;
-  width: 95.5%;
-  min-width: 240px;
-  height: 88%;
-
-  border: 10px solid var(--yellow);
-  padding: 40px;
-  margin: 0;
-  top: 25px;
-  left: 15px;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-foreground.visible.green {
+/* modal background color */
+.pokedex-window-scrollbox.grass-bg {
   background-color: green;
 }
 
 .modal-foreground.red {
   background-color: red;
+}
+
+.modal-backdrop {
+  background-color: green;
 }
 
 .yellow {
@@ -169,8 +116,13 @@ h2 {
   background-color: grey;
 }
 
-.pokemon-img {
-  text-align: center;
+.modal-backdrop {
+  background-color: red;
+}
+
+.form-inline {
+  color: white;
+  font-size: 20px;
 }
 
 .pokedex-window {
@@ -180,13 +132,20 @@ h2 {
   min-width: 300px;
   height: 500px;
   background-color: #696666;
-  margin: 20px auto;
-  padding: 25px 15px 35px;
+  margin-bottom: 80px;
+  padding: 25px 15px 25px;
   border-radius: 5%;
   border: 3px solid black;
   transition: all ease-in-out 0.4s;
 }
 
+#search-bar {
+  margin-left: 55px;
+}
+
+.control-group.form-inline {
+  text-align: right;
+}
 .pokedex-window-scrollbox {
   overflow: auto;
   max-width: 800px;
@@ -197,6 +156,7 @@ h2 {
   background-color: lightgrey;
   padding: 0 15px 0 15px;
 }
+
 .group-list-item {
   z-index: 2000;
 }
@@ -225,46 +185,21 @@ h2 {
   border-radius: 5px;
 }
 
-.pokemon-list {
-  padding: 0;
-  margin: 0;
-}
-
-.pokemon-list-style {
-  text-align: center;
-  cursor: pointer;
-  font-size: 1.7em;
-  font-weight: 600;
-  line-height: 60px;
-  color: black;
-  border-radius: 3px;
-  background-color: #b0acac;
-  border: 3px solid #999494;
-  width: 100%;
-  margin: 5px auto;
-  transition: all ease-in-out 0.3s;
-}
-.pokemon-list-style:hover {
-  font-size: 1.7em;
-  font-weight: 600;
-  line-height: 60px;
-  border: 3px solid #b0acac;
-  background-color: #999494;
-}
-/* remove outline to created buttons */
-.pokemon-list-style:focus {
-  outline: none;
-  transition: none;
-}
-
 header {
   max-width: 400px;
   margin: 0 auto;
 }
 
+nav {
+  margin-bottom: 40px;
+}
+
 .logo {
-  height: 300px;
+  height: 100px;
   margin: 0 auto;
+  position: absolute;
+  right: 100px;
+  top: -25px;
 }
 
 .form-control {
@@ -278,12 +213,18 @@ ul {
 }
 
 .pokedex {
+  display: inline-block;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: inset 0 0 15px grey;
   background-color: var(--red);
   color: black;
-  margin: 0 15%;
   border: 2px solid black;
   min-width: 400px;
-  padding: 0 15px;
+  max-width: 800px;
+  margin-bottom: 25px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 .pokedex-head {
@@ -298,6 +239,7 @@ ul {
 
 .modal-backdrop.in {
   opacity: 0;
+  background-color: green;
 }
 
 .modal-open {
@@ -305,7 +247,6 @@ ul {
 }
 .modal-body {
   min-height: 295px;
-
 }
 
 .modal {
