--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ h2 {
   right: 0;
   border-radius: 35px;
   background-color: #696666;
-  z-index: 1;
+  z-index: 4000;
 }
 
 .modal-foreground.visible::-webkit-scrollbar {
@@ -147,7 +147,7 @@ h2 {
   text-align: right;
 }
 .pokedex-window-scrollbox {
-  overflow: auto;
+  overflow: scroll;
   max-width: 800px;
   width: 100%;
   min-width: 250px;
@@ -155,10 +155,6 @@ h2 {
   margin: 0;
   background-color: lightgrey;
   padding: 0 15px 0 15px;
-}
-
-.group-list-item {
-  z-index: 2000;
 }
 
 /* loading screen */
@@ -175,6 +171,7 @@ h2 {
   background-color: #696666;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
 
 .pokedex-window-scrollbox::-webkit-scrollbar {
@@ -209,7 +206,7 @@ nav {
 
 ul {
   list-style-type: none;
-  z-index: 1000;
+
 }
 
 .pokedex {
@@ -234,29 +231,39 @@ ul {
 }
 
 .modal-backdrop {
-  display: none;
+  position: relative;
+  width: 600px;
+  height: 700px;
+  background-color: grey;
+  z-index: 1000;
 }
 
-.modal-backdrop.in {
-  opacity: 0;
-  background-color: green;
+.modal-content {
+  position: relative;
+  width: 95%;
+  height: 445px;
+  margin-left: 5%;
+  z-index: 2000;
+}
+
+.btn-lg {
+  width: 35%;
+  min-width: 130px;
+  text-align: center;
 }
 
 .modal-open {
   overflow: scroll;
 }
-.modal-body {
-  min-height: 295px;
-}
 
 .modal {
   z-index: inherit !important;
-  position: relative;
-  min-width: 320px;
+  position: absolute !important;
   margin: 0 auto;
   padding: 0;
 }
 #modal {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
