--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   position: absolute;
   background-color: var(--blue);
   color: #ffcb05;
-  border: 10px solid var(--yellow);
+  border: 0.625rem solid var(--yellow); /* 10/16 */
   width: 100%;
 
 }
@@ -27,29 +27,29 @@ a:hover {
 }
 
 h1 {
-  font-size: 35px;
+  font-size: 2.188rem; /* 35/16 */
   font-weight: 800;
   text-align: center;
   background-color: inherit;
   color: white;
   margin: 0 auto;
   -webkit-text-stroke-color: black;
-  -webkit-text-stroke-width: 0.9px;
-  border-bottom: 2px solid black;
+  -webkit-text-stroke-width: 0.056rem; /* 0.9/16 */
+  border-bottom: 0.125rem solid black; /* 2/16 */
   font-family: 'Rubik', sans-serif;
 }
 
 h2 {
-  margin-top: 15px;
-  font-size: 20px;
+  margin-top: 0.938rem; /* 15/16 */
+  font-size: 1.25rem; /* 20/16 */
   text-align: left;
 }
 
 .navbar {
   position: relative;
-  min-height: 50px;
+  min-height: 3.125rem; /* 50/16 */
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem; /* 40/16 */
 }
 
 .search {
@@ -59,7 +59,7 @@ h2 {
 }
 
 .headImg {
-    width: 100%;
+  width: 100%;
 }
 
 .modal-header {
@@ -67,16 +67,16 @@ h2 {
 }
 
 .modal-img {
-  height: 126px;
+  height: 7.875rem; /* 126/16 */
 }
 
 .header-powerbtn {
   background: url("../img/power.png");
   background-size: 100% 100%;
   margin-bottom: 0;
-  width: 45px;
-  height: 45px;
-  margin: 25px;
+  width: 2.813rem; /* 45/16 */
+  height: 2.813rem; /* 45/16 */
+  margin: 1.563rem; /* 25/16 */
   transition: ease-in-out all .4s;
   cursor: pointer;
 }
@@ -84,7 +84,7 @@ h2 {
 .header-powerbtn:hover {
   /* different image than above */
   background-color: var(--mustard);
-  border-radius: 50px;
+  border-radius: 3.125rem; /* 50/16 */
 }
 
 #overlay {
@@ -95,24 +95,24 @@ h2 {
   top: 0;
   left: 0;
   right: 0;
-  border-radius: 35px;
+  border-radius: 2.188rem; /* 35/16 */
   background-color: #696666;
   z-index: 4000;
 }
 
 .modal-foreground.visible::-webkit-scrollbar {
-  width: 10px;
+  width: 0.625rem; /* 10/16 */
 
 }
 .modal-foreground.visible::-webkit-scrollbar-track {
   background: #f1f1f1;
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  box-shadow: inset 0 0 0.313rem grey; /* 5/16 */
+  border-radius: 0.625rem; /* 10/16 */
 }
 .modal-foreground.visible::-webkit-scrollbar-thumb {
   background: #888;
-  height: 20px;
-  border-radius: 10px;
+  height: 1.25rem; /* 20/16 */
+  border-radius: 0.625rem; /* 10/16 */
 }
 .modal-foreground.visible::-webkit-scrollbar-thumb:hover {
   background: #555;
@@ -122,84 +122,84 @@ h2 {
 .fire-bg,
 .fighting-bg {
   background-image: url("..//img/fire.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .psychic-bg,
 .ghost-bg {
   background-image: url("..//img/psychic.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .grass-bg,
 .bug-bg {
   background-image: url("..//img/grass.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .water-bg {
   background-image: url("..//img/water.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .normal-bg,
 .ground-bg {
   background-image: url("..//img/colorless.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .electric-bg {
   background-image: url("..//img/electric.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .fairy-bg {
   background-image: url("..//img/fairy.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .dragon-bg {
   background-image: url("..//img/dragon.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .ice-bg {
   background-image: url("..//img/ice.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .poison-bg,
 .rock-bg {
   background-image: url("..//img/poison.png");
-  border: 15px solid var(--mustard);
+  border: 0.938rem solid var(--mustard); /* 15/16 */
 }
 
 .form-inline {
   color: white;
-  font-size: 20px;
+  font-size: 1.25rem; /* 20/16 */
   text-align: center;
 }
 
 .pokedex-window {
   position: relative;
-  max-width: 800px;
+  max-width: 50rem; /* 800/16 */
   width: 100%;
-  min-width: 300px;
-  height: 500px;
+  min-width: 18.75rem; /* 300/16 */
+  height: 31.25rem; /* 500/16 */
   background-color: #696666;
-  margin-bottom: 80px;
-  padding: 25px 15px 25px;
+  margin-bottom: 5rem; /* 80/16 */
+  padding: 1.563rem 0.938rem 1.563rem; /* 25/16, 15/16, 25/16 */
   border-radius: 5%;
-  border: 3px solid black;
+  border: 0.188rem solid black; /* 3/16 */
   transition: all ease-in-out 0.4s;
 }
 
 #search-bar {
-  margin-left: 40px;
+  margin-left: 2.5rem; /* 40/16 */
 }
 
 .control-label {
-  margin-left: 15px;
+  margin-left: 0.938rem; /* 15/16 */
 }
 
 .control-group.form-inline {
@@ -207,24 +207,24 @@ h2 {
 }
 .pokedex-window-scrollbox {
   overflow: scroll;
-  max-width: 800px;
+  max-width: 50rem; /* 800/16 */
   width: 100%;
-  min-width: 250px;
+  min-width: 15.625rem; /* 250/16 */
   height: 100%;
   margin: 0;
   background-color: lightgrey;
-  padding: 0 15px 0 15px;
+  padding: 0 0.938rem 0 0.938rem; /* 15/16, 15/16 */
 }
 
 /* loading screen */
 .msg-board {
   position: absolute;
   display: flex;
-  font-size: 24px;
+  font-size: 1.5rem; /* 24/16 */
   font-weight: 900;
-  max-width: 800px;
+  max-width: 50rem; /* 800/16 */
   width: 95%;
-  min-width: 290px;
+  min-width: 18.125rem; /* 290/16 */
   height: 95%;
   margin: 0;
   background-color: #696666;
@@ -234,20 +234,20 @@ h2 {
 }
 
 .pokedex-window-scrollbox::-webkit-scrollbar {
-  width: 11px;
+  width: 0.688rem; /* 11/16 */
 }
 .pokedex-window-scrollbox::-webkit-scrollbar-thumb {
   background-color: #818181;
-  border-radius: 5px;
+  border-radius: 0.313rem; /* 5/16 */
 }
 
 header {
-  max-width: 400px;
+  max-width: 25rem; /* 400/16 */
   margin: 0 auto;
 }
 
 .logo {
-  height: 100px;
+  height: 6.25rem; /* 100/16 */
   margin: 0 auto;
 
   text-align: center;
@@ -255,7 +255,7 @@ header {
 }
 
 .form-control {
-  margin: 20px auto;
+  margin: 1.25rem auto; /* 20/16 */
   text-align: right;
 }
 
@@ -266,16 +266,16 @@ ul {
 .pokedex {
   display: inline-block;
   text-align: center;
-  border-radius: 10px;
-  box-shadow: inset 0 0 15px grey;
+  border-radius: 0.625rem; /* 10/16 */
+  box-shadow: inset 0 0 0.938rem grey; /* 15/16 */
   background-color: var(--red);
   color: black;
-  border: 2px solid black;
-  min-width: 400px;
-  max-width: 800px;
-  margin-bottom: 25px;
-  padding-left: 45px;
-  padding-right: 45px;
+  border: 0.125rem solid black; /* 2/16 */
+  min-width: 25rem; /* 400/16 */
+  max-width: 50rem; /* 800/16 */
+  margin-bottom: 1.563rem; /* 25/16 */
+  padding-left: 2.813rem; /* 45/16 */
+  padding-right: 2.813rem; /* 45/16 */
 }
 
 .pokedex-head {
@@ -286,8 +286,8 @@ ul {
 
 .modal-backdrop {
   position: relative;
-  width: 600px;
-  height: 700px;
+  width: 37.5rem; /* 600/16 */
+  height: 43.75rem; /* 700/16 */
   background-color: grey;
   z-index: 1000;
 }
@@ -295,15 +295,15 @@ ul {
 .modal-content {
   position: relative;
   width: 95%;
-  height: 445px;
+  height: 27.813rem; /* 445/16 */
   margin-left: 5%;
-  margin-top: -5px;
+  margin-top: -0.313rem; /* -5/16 */
   z-index: 2000;
 }
 
 .btn-lg {
   width: 35%;
-  min-width: 130px;
+  min-width: 8.125rem; /* 130/16 */
   text-align: center;
 }
 
