--- a/dis/styles.css
+++ b/dis/styles.css
@@ -34,7 +34,7 @@ h1 {
   text-align: center;
   background-color: inherit;
   color: white;
-  margin: 0 auto;
+  margin-top: 10px;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.9px;
   border-bottom: 2px solid black;
@@ -67,12 +67,13 @@ h2 {
 .header-powerbtn {
   background: url("../src/img/power.png");
   background-size: 100% 100%;
-  margin-bottom: 0;
   width: 2.8125rem;
   height: 2.8125rem;
-  margin: 1.5625rem;
+  margin-top: 1.3rem;
+  margin-left: 5%;
   transition: ease-in-out all .4s;
   cursor: pointer;
+  float: left;
 }
 
 .header-powerbtn:hover {
@@ -96,18 +97,20 @@ h2 {
 
 .modal-foreground.visible::-webkit-scrollbar {
   width: 0.625rem;
-
 }
+
 .modal-foreground.visible::-webkit-scrollbar-track {
   background: #f1f1f1;
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
 }
+
 .modal-foreground.visible::-webkit-scrollbar-thumb {
   background: #888;
   height: 1.25rem;
   border-radius: 0.625rem;
 }
+
 .modal-foreground.visible::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
@@ -117,6 +120,7 @@ h2 {
 .fighting-bg {
   background-image: url("..//img/fire.png");
   border: 15px solid var(--mustard);
+  opacity: .5;
 }
 
 .psychic-bg,
@@ -179,7 +183,8 @@ h2 {
   max-width: 800px;
   width: 100%;
   min-width: 300px;
-  height: 31.25rem;
+  height: 55vh;
+  min-height: 150px;
   background-color: #696666;
   margin-bottom: 5rem;
   padding: 1.5625rem 0.9375rem 1.5625rem;
@@ -198,7 +203,7 @@ h2 {
 
 .controls {
     text-align: center;
-    margin: 10px auto;
+    margin: 0 auto;
 }
 
 .control-group.form-inline {
@@ -218,10 +223,13 @@ h2 {
 /* loading screen */
 .msg-board {
   position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   font-size: 1.5rem;
   font-weight: 900;
   max-width: 800px;
+  border-radius: 15px;
   width: 95%;
   min-width: 290px;
   height: 95%;
@@ -253,7 +261,7 @@ header {
 }
 
 .form-control {
-  margin: 1.25rem auto;
+  margin: 0.55rem auto;
   text-align: left !important;
 }
 
@@ -270,7 +278,9 @@ ul {
   color: black;
   border: 2px solid black;
   min-width: 400px;
-  max-width: 800px;
+  max-width: 600px;
+  height: 90vh;
+  min-height: 300px;
   margin: 1.5625rem auto;
   padding-left: 2.8125rem;
   padding-right: 2.8125rem;
@@ -301,7 +311,7 @@ ul {
 
 .btn-lg {
   width: 35%;
-  min-width: 130px;
+  min-width: 140px;
   text-align: center;
 }
 
@@ -325,6 +335,7 @@ ul {
   margin: 0 auto;
   padding: 0;
 }
+
 #modal {
   width: 100%;
   height: 100%;
