--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,8 @@
 
 body {
   position: absolute;
-  background-color: var(--blue);
+  background-image: url("https://assets.pokemon.com//assets/cms2/img/misc/virtual-backgrounds/masters/forest.jpg");
+  /* background-color: var(--blue); */
   color: #ffcb05;
   border: 10px solid var(--yellow);
   width: 100%;
@@ -32,7 +33,7 @@ h1 {
   text-align: center;
   background-color: inherit;
   color: white;
-  margin: 0 auto;
+  margin-top: 10px;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.9px;
   border-bottom: 2px solid black;
@@ -46,7 +47,7 @@ h2 {
 }
 
 .search {
-  text-align: left !important;
+  text-align: center;
   display: block;
 }
 
@@ -206,7 +207,8 @@ h2 {
   max-width: 800px;
   width: 100%;
   min-width: 300px;
-  height: 31.25rem;
+  height: 55vh;
+  min-height: 150px;
   background-color: #696666;
   margin-bottom: 5rem;
   padding: 1.5625rem 0.9375rem 1.5625rem;
@@ -219,13 +221,18 @@ h2 {
   text-align: left;
 }
 
-.control-label {
+/* .control-label {
   margin-left: 0.9375rem;
+} */
+
+.controls {
+  text-align: center;
+  margin: 0 auto;
 }
 
-.control-group.form-inline {
-  /* text-align: right; */
-}
+/* .control-group.form-inline {
+  text-align: right;
+} */
 .pokedex-window-scrollbox {
   overflow: scroll;
   max-width: 800px;
@@ -240,10 +247,13 @@ h2 {
 /* loading screen */
 .msg-board {
   position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   font-size: 1.5rem;
   font-weight: 900;
   max-width: 800px;
+  border-radius: 15px;
   width: 95%;
   min-width: 290px;
   height: 95%;
@@ -292,7 +302,9 @@ ul {
   color: black;
   border: 2px solid black;
   min-width: 400px;
-  max-width: 800px;
+  max-width: 600px;
+  height: 90vh;
+  min-height: 300px;
   margin: 1.5625rem auto;
   padding-left: 2.8125rem;
   padding-right: 2.8125rem;
@@ -344,6 +356,16 @@ ul {
   text-align: center;
 }
 
+.btn-secondary {
+  background-color: var(--yellow);
+  color: var(--navy);
+}
+
+.btn-secondary:hover {
+  color: var(--yellow);
+  background-color: var(--navy);
+}
+
 .card-open {
   overflow: scroll;
 }
@@ -358,7 +380,6 @@ ul {
   position: absolute !important;
   margin: 0 auto;
   padding: 0;
-  
 }
 #card {
   width: 100%;
