--- a/dis/styles.css
+++ b/dis/styles.css
@@ -34,8 +34,8 @@ a:hover {
 }
 
 h1 {
-  font-size: 2.1875rem;
-  font-weight: 800;
+  /* font-size: 35px; */
+  font-weight: 700 !important;
   text-align: center;
   background-color: inherit;
   color: white;
@@ -50,6 +50,23 @@ h2 {
   margin-top: 0.9375rem;
   font-size: 1.25rem;
   text-align: left;
+}
+
+@media all and (max-width: 576px) {
+  h1 {
+    margin-top: 18px;
+    font-weight: 500 !important;
+    font-size: 50px !important;
+  }
+  .header-powerbtn {
+    width: 35px !important;
+    height: 35px !important;
+    margin-left: -4% !important;
+  }
+  .btn-pokemon {
+    width: 30% !important;
+    font-size: 16px !important;
+  }
 }
 
 .search {
@@ -73,7 +90,8 @@ h2 {
   display: inline-block; */
 /* } */
 .modal-img {
-  height: 7.875rem;
+  width: 7.875rem;
+  height: auto;
 }
 
 /* .card-img {
@@ -83,6 +101,7 @@ h2 {
 .header-powerbtn {
   background: url("../src/img/power.png");
   background-size: 100% 100%;
+  border-radius: 50px;
   width: 2.8125rem;
   height: 2.8125rem;
   margin-top: 1.3rem;
@@ -90,12 +109,16 @@ h2 {
   transition: ease-in-out all .4s;
   cursor: pointer;
   float: left;
+  border: none;
+
 }
 
 .header-powerbtn:hover {
-  /* different image than above */
-  background-color: var(--mustard);
-  border-radius: 50px;
+  background: url("../src/img/power-yellow.png");
+  background-size: 100% 100%;
+  transition: ease-in-out all .4s;
+  /* background-color: var(--mustard);
+  border-radius: 60px; */
 }
 
 #overlay {
@@ -228,7 +251,7 @@ h2 {
   max-width: 800px;
   width: 100%;
   min-width: 300px;
-  height: 62vh;
+  height: 60vh;
   min-height: 150px;
   background-color: #696666;
   margin-bottom: 5rem;
@@ -238,9 +261,11 @@ h2 {
   transition: all ease-in-out 0.4s;
 }
 
-/* .control-label {
-  margin-left: 0.9375rem;
-} */
+@media all and (max-width: 586px) {
+  .pokedex-window {
+    height: 60vh;
+  }
+}
 
 label {
   margin: 0;
@@ -255,13 +280,42 @@ label {
 }
 
 .filter {
-  display: inline-block;
   display: flex;
   flex-direction: row;
+  margin-bottom: 0;
+}
+
+.filter-btn {
+  display: none;
+  margin-bottom: 8px;
+  height: 30px;
+  width: 60px;
+  font-size: 14px;
+  padding: 0px;
+  margin: 8px auto;
 }
 
 .radio {
   margin: 18px 4px 4px 22px;
+}
+
+@media all and (max-width: 576px) {
+  p {
+    font-size: 16px;
+  }
+  label {
+    font-size: 14px;
+  }
+  .radio {
+    margin: 6px 4px 4px 14px;
+    height: 11px;
+  }
+  .filter {
+    display: none;
+  }
+  .filter-btn {
+    display: block;
+  }
 }
 
 /* .control-group.form-inline {
@@ -353,33 +407,60 @@ ul {
 
 .pokedex {
   display: inline-block;
-  /* display: none; */
   text-align: center;
   border-radius: 10px;
   box-shadow: inset 0 0 15px grey;
   background-color: var(--red);
   color: black;
   border: 2px solid black;
+  width: 80%;
   min-width: 400px;
   max-width: 600px;
   height: 90vh;
   min-height: 300px;
-  margin: 1.5625rem auto;
+  margin-top: 1.5625rem;
   padding-left: 2.8125rem;
   padding-right: 2.8125rem;
   animation-name: openDex;
   animation-duration: 4s;
 }
 
+@media all and (max-width: 480px) {
+  .pokedex {
+    width: 100%
+  }
+}
+
 @keyframes openDex {
   0%  { 
-    top: 2100px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 2000px;
+    /* left: 50%; */
     }
   25% {
+    /* position: absolute; */
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
     top:800px;
     transform: rotateX(100deg)
   }
   100% {
+    /* position: absolute; */
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
     top:0px;
     transform: rotateX(0deg)
   }
@@ -391,13 +472,6 @@ ul {
   text-align: center;
 }
 
-/* .card-backdrop {
-  position: relative;
-  width: 37.5rem;
-  height: 43.75rem;
-  background-color: grey;
-  z-index: 1000;
-} */
 .modal-backdrop {
   position: relative;
   width: 37.5rem;
@@ -407,14 +481,6 @@ ul {
   display: none;
 }
 
-/* .card-content {
-  position: relative;
-  width: 95%;
-  height: 27.8125rem;
-  margin-left: 5%;
-  margin-top: -0.3125rem;
-  z-index: 2000;
-} */
 .modal-content {
   position: relative;
   width: 95%;
@@ -452,28 +518,10 @@ ul {
     background-color: var(--navy);
 }
 
-/* .card-open {
-  overflow: scroll;
-} */
 .modal-open {
   overflow: scroll;
 }
 
-/* .card {
-  display: none !important;
-  z-index: 3 !important;
-  position: relative !important;
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background-color: yellow;
-} */
-/* #card {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-} */
 .modal {
   z-index: inherit !important;
   position: absolute !important;
